--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,11 +35,13 @@ services:
     container_name: promtail
     restart: unless-stopped
     volumes:
-      - ./promtail.yaml:/etc/promtail/promtail.yaml:ro
+      #- ./promtail.yaml:/etc/promtail/promtail.yaml:ro
+      - ./config.yml:/etc/promtail/config.yml:ro
       - ./geoip-enrichment/log/syslog.log:/var/log/syslog/syslog.log:ro
       - ./GeoIPLite/GeoLite2-City_20231107/GeoLite2-City.mmdb:/usr/share/GeoIP/GeoLite2-City.mmdb:ro
     command: 
-      - '-config.file=/etc/promtail/promtail.yaml'
+      #- '-config.file=/etc/promtail/promtail.yaml'
+      - '-config.file=/etc/promtail/config.yml'
       #- '-config.file=/home/greg/tmp/router-project2/promtail.yaml'
     networks:
       - loki
