--- a/geoip-enrichment/config/syslog-ng.conf
+++ b/geoip-enrichment/config/syslog-ng.conf
@@ -24,7 +24,7 @@ filter f_default    { level(info);
 # Destination
 ##############
 #destination d_syslog { file("/var/log/syslog"); };
-destination d_syslog { file("/var/log/syslog.log"); };
+destination d_syslog { file("/var/log/syslog/syslog.log"); };
 ##############
 
 # Filters
