--- a/geoip-enrichment/docker-compose.yml
+++ b/geoip-enrichment/docker-compose.yml
@@ -13,11 +13,11 @@ services:
       - PGID=1000
       - TZ=Etc/UTC
     volumes:
-      #- ./syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
       - ./config:/config
       - ./log:/var/log #optional
-        #- /var/log/iptables.log:/var/log/iptables.log:ro
       - geoip:/usr/share/GeoIP
+      - ./config/logrotater/root:/etc/crontabs/root
+      - ./config/logrotater/logrotater.sh:/root/logrotater.sh
     ports:
       - 514:514/tcp
     depends_on:
