--- a/geoip-enrichment/docker-compose.yml
+++ b/geoip-enrichment/docker-compose.yml
@@ -3,6 +3,9 @@ services:
 
   syslog:
     image: lscr.io/linuxserver/syslog-ng:latest
+    entrypoint: 
+      - /bin/docker-entrypoint.sh
+        #- /bin/logrotater.sh
     container_name: syslog
     hostname: syslog
     restart: unless-stopped
@@ -13,11 +16,15 @@ services:
       - PGID=1000
       - TZ=Etc/UTC
     volumes:
+      - ./config/logrotater/init:/init
       - ./config:/config
       - ./log:/var/log #optional
       - geoip:/usr/share/GeoIP
-      - ./config/logrotater/root:/etc/crontabs/root
-      - ./config/logrotater/logrotater.sh:/root/logrotater.sh
+      - ./config/logrotater/docker-entrypoint.sh:/bin/docker-entrypoint.sh
+      - ./config/logrotater/logrotater.sh:/bin/logrotater.sh
+      - ./config/logrotater/root:/root/root
+        #command:
+        #- logrotater.sh
     ports:
       - 514:514/tcp
     depends_on:
